Fixed issues: >>>1130-Reports_UI: Improper allignment of text is seen under "Comments" section in "HTML" and "PDF" reports(In PDF works fine but in HTML report allignment is improper). >>>1139-ICE_TaskList_ScrollBar : When number of tasks if more, its difficult to scroll down the list using scroll bar(Increased the scroller size Note:To overcome we have an option of search task). >>>1186	Admin: First letter of the First Name for admin user is not seen(Login as admin and update the First and Last name see that at the top right corner First and Last name did not updated with the latest changes).

--- a/public/css/scroll.css
+++ b/public/css/scroll.css
@@ -290,7 +290,8 @@
 	height: 100% !important;
 }
 .pluginTask > .scroll-element.scroll-y .scroll-bar{
-       background: #321e4f
+       background: #321e4f;
+       height: 10px !important;
 }
 .pluginTask > .scroll-element .scroll-element_track{
        background: rgb(211, 211, 211)
